tests/cases/fail/list_index_type.p4
def main() -> None:
    xs: list[int] = list_int()
    list_append(xs, 1)
    print(xs[1.5])
